--- a/web-server/templates/login_cert.html
+++ b/web-server/templates/login_cert.html
@@ -13,17 +13,23 @@
       reader.onload = () => {
         var p12Der = arrayBufferToString(reader.result);
         var p12Asn1 = forge.asn1.fromDer(p12Der);
-        var p12 = forge.pkcs12.pkcs12FromAsn1(p12Asn1, "");
+        var p12 = forge.pkcs12.pkcs12FromAsn1(p12Asn1);
         var bags = p12.getBags({ bagType: forge.pki.oids.certBag });
+        console.log(bags);
         var cert = bags[forge.pki.oids.certBag][0].cert;
-
+        console.log(cert);
         serial = cert.serialNumber;
 
         var keyBags = p12.getBags({
-          bagType: forge.pki.oids.pkcs8ShroudedKeyBag,
+          bagType: forge.pki.oids.keyBag,
         });
-        var keyBag = keyBags[forge.pki.oids.pkcs8ShroudedKeyBag][0];
+        console.log("BAGS", keyBags);
+        var keyBag = keyBags[forge.pki.oids.keyBag][0];
+        console.log("BAG", keyBags);
+
         privateKey = keyBag.key;
+        console.log("Key", keyBags);
+
         resolve({
           key: privateKey,
           serial: serial,
@@ -72,6 +78,7 @@
         md.update(challenge, "utf8");
         var signature = result.key.sign(md);
         console.log(signature);
+        console.log(signature.toString("hex"));
         fetch("/solve_challenge", {
           method: "POST",
           headers: {
@@ -81,14 +88,20 @@
             signature: forge.util.encode64(signature),
             serial: serial,
           }),
-        }).then((response) => {
-          if (response.status == 200) {
-            console.log("REDI")
-            window.location.replace(response.url);
-          } else {
-            console.log("error");
-          }
-        });
+        })
+          .then((response) => {
+            console.log(response)
+            return response.json();
+          })
+          .then((response) => {
+            console.log(response);
+            if (response["verified"]) {
+              console.log("REDI");
+              window.location.replace("/profile");
+            } else {
+              //window.location.replace("/login_cert?error=True");
+            }
+          });
       });
     });
   }
