fix system service

--- a/shared/ansible/roles/ca/templates/caserver.service.j2
+++ b/shared/ansible/roles/ca/templates/caserver.service.j2
@@ -4,7 +4,7 @@ Description=CA Server
 [Service]
 User={{ username }}
 WorkingDirectory=/home/{{ username }}/ca
-ExecStart=gunicorn api:app
+ExecStart=gunicorn wsgi:app
 
 [Install]
 WantedBy=multi-user.target
