--- a/shared/ansible/roles/web/templates/webserver.env.j2
+++ b/shared/ansible/roles/web/templates/webserver.env.j2
@@ -1,1 +1,9 @@
-SECRET_KEY="b3c622d15dde101396de6151b87db6316acab5c12a5405ac53fd11da6815d7e3"
+SECRET_KEY="{{ secret_key }}"
+
+DATABASE_URI="mysql+pymysql://{{ db_user }}:{{ db_pass }}@{{ hostvars['db'].ansible_host }}:3306/{{ db_name }}"
+
+CORE_CA_URL="https://{{ hostvars['ca'].ansible_host }}"
+
+ROOT_CERT="/etc/asl/certs/root_cert.pem"
+SERVER_CERT="/etc/asl/certs/web_cert.pem"
+SERVER_KEY="/etc/asl/certs/web_key.pem"
