some small fixes

--- a/shared/ansible/roles/web/templates/webserver.env.j2
+++ b/shared/ansible/roles/web/templates/webserver.env.j2
@@ -1,6 +1,7 @@
 SECRET_KEY="{{ secret_key }}"
 
-DATABASE_URI="mysql+pymysql://{{ db_user }}:{{ db_pass }}@{{ hostvars['db'].ansible_host }}:3306/{{ db_name }}"
+DATABASE_URI="mysql+pymysql://{{ db_user }}:{{ db_pass }}@{{ hostvars['db'].ansible_host }}:3306/{{ db_name }}
+TEST=?ssl-key=/etc/asl/certs/web_key.pem&ssl-cert=/etc/asl/certs/client_cert.pem&ssl-ca=/etc/asl/certs/root_cert.pem=&ssl-verify-server-cert"
 
 CORE_CA_URL="https://{{ hostvars['ca'].ansible_host }}"
 
