--- a/shared/ansible/roles/web/templates/webserver.env.j2
+++ b/shared/ansible/roles/web/templates/webserver.env.j2
@@ -1,6 +1,6 @@
 SECRET_KEY="{{ secret_key }}"
 
-DATABASE_URI="mysql+pymysql://{{ db_user }}:{{ db_pass }}@{{ hostvars['db'].ansible_host }}:3306/{{ db_name }}?ssl_key=/etc/asl/certs/web_key.pem&ssl_cert=/etc/asl/certs/client_cert.pem&ssl_ca=/etc/asl/certs/root_cert.pem=&ssl-verify-server-identity"
+DATABASE_URI="mysql+pymysql://{{ db_user }}:{{ db_pass }}@{{ hostvars['db'].ansible_host }}:3306/{{ db_name }}?ssl_key=/etc/asl/certs/web_key.pem&ssl_cert=/etc/asl/certs/web_cert.pem&ssl_ca=/etc/asl/certs/root_cert.pem&ssl-verify-server-identity"
 
 CORE_CA_URL="https://{{ hostvars['ca'].ansible_host }}"
 
