--- a/web-server/templates/certificates.html
+++ b/web-server/templates/certificates.html
@@ -30,6 +30,7 @@
         name="cert_{{certificate.serial}}"
         id="cert_{{certificate.serial}}"
         value="{{certificate.serial}}"
+        class="d-none"
       />
       <button type="submit" value="revoke">Revoke</button>
     </form>
